# ZEclipse

./: .gitignore  .mailmap  AGENTS.md  Anchor.toml  Cargo.toml  DOCUMENTATION.md  QUICK_REFERENCE.txt  README.md  RECORDING_SETUP.md  START_HERE.md  VIDEO_DEMO_FILES.txt  VIDEO_DEMO_SUMMARY.md  VIDEO_SCRIPT.md  VIDEO_TALKING_POINTS.md  convert_params.sh
.github/workflows/: security-tests.yml
app/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
app/cpp_client/: main.cpp
app/cpp_server/: main.cpp
app/src/: config.ts
app/src/cli/: blackout-cli.ts  zeclipse-cli.ts
app/src/client/: blackout-client.ts  blackout-idl.ts  zeclipse-client.ts  zeclipse-idl.ts
app/src/connector/: dapp-connector.ts  timing-enhanced-connector.ts
app/src/demos/: demo-video.ts
app/src/efficiency/: cost-efficiency.ts  terminal-dashboard.ts
app/src/idl/: blackout.ts  zeclipse.ts
app/src/proof-generator/: hyperplonk.ts  index.ts  plonky2.ts  poseidon2.ts
app/src/timing/: temporal-obfuscation.ts  timing-connector.ts
app/tests/: setup.ts  temporal-obfuscation-e2e.test.ts  timing-obfuscation.test.ts
app/tests/utils/: test-cleanup.ts
docs/: COMPILE_INSTRUCTIONS.md  CONNECTOR_GUIDE.md  TECHNICAL_DOCUMENTATION.md  TEMPORAL_OBFUSCATION.md  USABILITY.md
docs/architecture/: overview.puml  transfer_flow.puml
poseidon/: POSEIDON_INTEGRATION.md  poseidon_constants_clean.txt  poseidon_constants_raw.txt  poseidon_constants_rust.txt  standalone_test_poseidon.rs
poseidon/poseidon_standalone/: Cargo.toml  README.md
poseidon/poseidon_standalone/src/: lib.rs
poseidon/poseidon_tester/: Cargo.toml
poseidon/poseidon_tester/src/: main.rs
poseidon/poseidon_validator/: Cargo.toml  README.md
poseidon/poseidon_validator/src/: extended_tests.rs  find_imports.rs  lib_test.rs  main.rs  test_import.rs
program/src/: lib.rs
programs/blackout/: Cargo.toml
programs/blackout-anchor/: Cargo.toml
programs/blackout-anchor/src/: anchor_accounts.rs  lib.rs
programs/blackout/examples/: test_poseidon.rs
programs/blackout/src/: entrypoint.rs  errors.rs  lib.rs  optimized_validation.rs  poseidon_validator.rs  solana_imports.rs  state.rs  utils.rs
programs/blackout/src/instructions/: batch_hop.rs  config_update.rs  execute_hop.rs  finalize.rs  initialize.rs  initialize.rs.orig  initialize.rs.rej  processor.rs  refund.rs  reveal_fake.rs
programs/blackout/src/instructions/batch_hop/: batch_hop.rs
programs/blackout/src/instructions/config_update/: config_update.rs
programs/blackout/src/instructions/execute_hop/: execute_hop.rs
programs/blackout/src/instructions/finalize/: finalize.rs
programs/blackout/src/instructions/initialize/: initialize.rs
programs/blackout/src/instructions/refund/: refund.rs
programs/blackout/src/instructions/reveal_fake/: reveal_fake.rs
programs/blackout/src/pure_poseidon/: bridge.rs
programs/blackout/src/state/: bridge.rs  config.rs
programs/blackout/src/utils/: crypto.rs  error_handling.rs  mod.rs
programs/blackout/src/verification/formal/: mod.rs
programs/blackout/tests/: bloom_filter_edge_cases.rs  bloom_filter_fuzz_tests.rs  bloom_filter_penetration_tests.rs  bloom_filter_test_vectors.rs  crypto_test_vectors.md  e2e_flow_test.rs  pda_validation_benchmark.rs  pda_validation_integration_test.rs  pda_validation_simple_test.rs  pda_validation_test_vectors.rs  pda_validation_tests.rs  poseidon_integration.rs  pure_poseidon_integration_test.rs  run_all_tests.rs  test_basic_poseidon.rs  test_batch_hop.rs  test_config_update.rs  test_crypto_components.rs  test_execute_hop.rs  test_framework.rs  test_init_finalize.rs  test_performance.rs  test_poseidon_hash.rs  test_refund_functionalities.rs  test_reveal_fake.rs
programs/zeclipse/: Cargo.toml
programs/zeclipse-anchor/: Cargo.toml
programs/zeclipse-anchor/src/: anchor_accounts.rs  lib.rs
programs/zeclipse/examples/: test_poseidon.rs
programs/zeclipse/src/: anchor_types.rs  entrypoint.rs  errors.rs  lib.rs  optimized_validation.rs  poseidon_constants.rs  poseidon_validator.rs  state.rs  utils.rs
programs/zeclipse/tests/: bloom_filter_edge_cases.rs  bloom_filter_fuzz_tests.rs  bloom_filter_penetration_tests.rs  bloom_filter_test_vectors.rs  crypto_test_vectors.md  e2e_flow_test.rs  pda_validation_benchmark.rs  pda_validation_integration_test.rs  pda_validation_simple_test.rs  pda_validation_test_vectors.rs  pda_validation_tests.rs  poseidon_test_vectors.rs  pure_poseidon_integration_test.rs  run_all_tests.rs  run_tests.sh  test_batch_hop.rs  test_config_update.rs  test_crypto_components.rs  test_execute_hop.rs  (+6 more)
src/utils/: poseidon_params_t3.txt
temp/: anchor_compatible_lib.rs  anchor_lib.rs  anchor_minimal.rs  anchor_standard.rs  blackout_lib_clean.rs  blackout_perfect_lib.rs  bridge_lib.rs  clean_lib.rs  cmd_lib.rs  entrypoint.rs  final_solution.rs  final_solution_lib.rs  fix_batch_hop.patch  fix_batch_hop_corrected.patch  fix_execute_hop.patch  fix_initialize.patch  fix_initialize_corrected.patch  fix_poseidon_validator.patch  fix_solana_imports.patch  fix_solana_imports_corrected.patch  ix_lib.rs  lib.rs  main_lib.rs  minimal_anchor_lib.rs  minimal_lib.rs  minimal_working.rs  original_lib.rs  precise_lib.rs  precision_lib.rs  separate_entrypoint_lib.rs  simple_blackout_lib.rs  simplified_lib.rs
tests/: rent_efficiency_test.ts
tools/benchmark/: Cargo.toml  cost_efficiency_benchmark.rs  efficiency_analysis.py  simple_benchmark.py  simulation_results.json
tools/poseidon_validator/: Cargo.toml  src.rs
verification/: mod.rs
verification/formal/: bloom_filter_specification.rs  mod.rs
(+26 files in other folders)
