[workspace]
members = [
    "programs/zeclipse",
    "programs/zeclipse-anchor",
    "tools/poseidon_validator",
    "poseidon/poseidon_standalone",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1