[package]
name = "blackout_poseidon"
version = "0.1.0"
edition = "2021"
description = "Standalone Poseidon implementation for BlackoutSOL with clean error handling"
authors = ["BlackoutSOL Team"]

[dependencies]
solana-poseidon = "2.2.14"
curve25519-dalek = "4.0"
num-bigint = "0.4"
thiserror = "1.0"
hex = "0.4"

[features]
default = []
anchor_compat = ["dep:anchor-lang"]

[dependencies.anchor-lang]
version = "0.29.0"
optional = true
